cyclonedx-bom/tests/snapshots/specification_tests__it_should_parse_all_of_the_valid_xml_specifications@valid-metadata-author-1.3.xml.snap
---
source: cyclonedx-bom/tests/specification_tests.rs
expression: bom_output
input_file: cyclonedx-bom/tests/data/1.3/valid-metadata-author-1.3.xml
---
<?xml version="1.0" encoding="utf-8"?>
<bom xmlns="http://cyclonedx.org/schema/bom/1.3" serialNumber="urn:uuid:3e671687-395b-41f5-a30f-a58921a69b79" version="1">
  <metadata>
    <authors>
      <author>
        <name>Samantha Wright</name>
        <email>samantha.wright@example.com</email>
        <phone>800-555-1212</phone>
      </author>
    </authors>
  </metadata>
  <components />
</bom>
